# fastly-worker

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  fastly.dist.toml  fastly.test.toml  redirectionio.dist.json  redirectionio.test.json  rust-toolchain  rust-toolchain.toml
debug/: Dockerfile  Makefile  index.html  index.php
src/: main.rs  rio.rs
src/rio/: application.rs  configuration.rs  error.rs  logging.rs  request_sender.rs
