[package]
name = "redirectionio-fastly-worker"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[profile.release]
debug = 1

[dependencies]
chrono = "0.4"
fastly = "^0.9.8"
futures = "^0.3.19"
log = "^0.4.17"
log-fastly = "^0.9.8"
quick-error = "^2.0.1"
readonly = "^0.2.1"
redirectionio = { version = "=2.10.1", default-features = false, features = ["compress"] }
# Uncomment the following line to debug
# redirectionio = { path = "../../agent/libredirectionio/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.70"
