[package]
name = "redirectionio-fastly-worker"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[profile.release]
debug = 1

[dependencies]
chrono = "0.4"
fastly = "^0.9.12"
futures = "^0.3.31"
log = "^0.4.28"
log-fastly = "^0.9.12"
quick-error = "^2.0.1"
readonly = "^0.2.13"
redirectionio = { version = "=3.0.0-beta.2", default-features = false, features = ["compress"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
