[package]
name = "redirectionio-fastly-worker"
version = "3.0.0"
authors = []
edition = "2024"
publish = false

[profile.release]
debug = 1

[dependencies]
chrono = "0.4"
fastly = "^0.12.0"
futures = "^0.3.32"
log = "^0.4.29"
log-fastly = "^0.12.0"
quick-error = "^2.0.1"
readonly = "^0.2.13"
redirectionio = { version = "=3.1.0", default-features = false, features = ["compress"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
